// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form Input changes value and all related formulas 1`] = `
<div
  className="ui segment ui form"
>
  <div
    className="ui form"
  >
    <div
      className="fields"
    >
      <div
        className="fourteen wide field"
      >
        <label
          htmlFor="owner.personal.name"
        >
          Mimo
        </label>
        <div
          className="ui labeled input"
        >
          <div
            className="ui label label"
            onClick={[Function]}
          >
            Name
          </div>
          <input
            name="owner.personal.name"
            onChange={[Function]}
            type="text"
            value="Tomas"
          />
        </div>
      </div>
      <div
        className="two wide field"
      >
        <label
          htmlFor="older"
        >
          Older
        </label>
        <div
          className="ui input"
        >
          <div
            className="sc-bdVaJa iDwIel"
          >
            50
          </div>
        </div>
      </div>
    </div>
    <div
      className="fields"
    >
      <div
        className="one wide field"
      >
         
      </div>
      <div
        className="inline field"
      >
        <label
          htmlFor="owner.personal.age"
        >
          Age: 
        </label>
        <div
          className="ui input"
        >
          <input
            name="owner.personal.age"
            onChange={[Function]}
            type="text"
            value="40"
          />
        </div>
      </div>
      <div
        className="two wide field"
      >
         
      </div>
      <div
        className="inline field"
      >
        <label
          htmlFor="younger"
        >
          Younger:
        </label>
        <div
          className="ui input"
        >
          <div
            className="sc-bdVaJa iDwIel"
          >
            20
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Form Input renders correctly 1`] = `
<div
  className="ui segment ui form"
>
  <div
    className="ui form"
  >
    <div
      className="fields"
    >
      <div
        className="fourteen wide field"
      >
        <label
          htmlFor="owner.personal.name"
        >
          Mimo
        </label>
        <div
          className="ui labeled input"
        >
          <div
            className="ui label label"
            onClick={[Function]}
          >
            Name
          </div>
          <input
            name="owner.personal.name"
            onChange={[Function]}
            type="text"
            value="Tomas"
          />
        </div>
      </div>
      <div
        className="two wide field"
      >
        <label
          htmlFor="older"
        >
          Older
        </label>
        <div
          className="ui input"
        >
          <div
            className="sc-bdVaJa iDwIel"
          >
            43
          </div>
        </div>
      </div>
    </div>
    <div
      className="fields"
    >
      <div
        className="one wide field"
      >
         
      </div>
      <div
        className="inline field"
      >
        <label
          htmlFor="owner.personal.age"
        >
          Age: 
        </label>
        <div
          className="ui input"
        >
          <input
            name="owner.personal.age"
            onChange={[Function]}
            type="text"
            value="33"
          />
        </div>
      </div>
      <div
        className="two wide field"
      >
         
      </div>
      <div
        className="inline field"
      >
        <label
          htmlFor="younger"
        >
          Younger:
        </label>
        <div
          className="ui input"
        >
          <div
            className="sc-bdVaJa iDwIel"
          >
            13
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
